# macos-extension-manager

./: .gitignore  AGENTS.md  BUILD.md  Cargo.toml  PROGRESS.md  PROJECT.md  README.md  install.sh
src/: error.rs  lib.rs  main.rs
src/models/: background_item.rs  item_type.rs  launch_agent.rs  launch_daemon.rs  login_item.rs  mod.rs  open_at_login_item.rs  system_extension.rs
src/services/: background_items_service.rs  launch_agents_service.rs  launch_daemons_service.rs  login_items_service.rs  mod.rs  open_at_login_service.rs  privilege_service.rs  system_extensions_service.rs
src/state/: app_state.rs  mod.rs
src/ui/: app.rs  app_state.rs  mod.rs
src/ui/components/: loading_spinner.rs  mod.rs  status_badge.rs
src/ui/layouts/: mod.rs  sidebar.rs
src/ui/views/: detail_view.rs  help_view.rs  launch_agents_view.rs  launch_daemons_view.rs  login_items_view.rs  mod.rs  system_extensions_view.rs
src/utils/: mod.rs  plist_parser.rs  shell.rs
