[package]
name = "macos-extman"
version = "0.1.0"
edition = "2021"
authors = ["System Extension Manager Team"]
description = "A TUI application to manage Login Items, Launch Agents, Launch Daemons, and System Extensions"
license = "MIT"
repository = "https://github.com/example/macos-extman"

[dependencies]
ratatui = "0.26"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
plist = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"

[lib]
name = "macos_extman"
path = "src/lib.rs"

[[bin]]
name = "extman"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true